--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://jonssmall.github.io/campaign/",
+  "homepage": "https://anthonycolucciward1council.com/",
   "scripts": {
     "dev": "vite",
     "build": "node generate-seo-files.js && vite build",
